src/modules/GmshAPI/src/GmshInterface/gmshc.h

/* Extrude the entities `dimTags' in the built-in CAD representation, using a
 * translation along (`dx', `dy', `dz'). Return extruded entities in
 * `outDimTags'. If `numElements' is not empty, also extrude the mesh: the
 * entries in `numElements' give the number of elements in each layer. If
 * `height' is not empty, it provides the (cumulative) height of the different
 * layers, normalized to 1. If `recombine' is set, recombine the mesh in the
 * layers. */
GMSH_API void gmshModelGeoExtrude(int *dimTags, size_t dimTags_n,
                                  const double dx,
                                  const double dy,
                                  const double dz,
                                  int **outDimTags, size_t *outDimTags_n,
                                  int *numElements, size_t numElements_n,
                                  double *heights, size_t heights_n,
                                  const int recombine,
                                  int *ierr);
/* Extrude the entities `dimTags' in the built-in CAD representation, using a
 * rotation of `angle' radians around the axis of revolution defined by the
 * point (`x', `y', `z') and the direction (`ax', `ay', `az'). The angle
 * should be strictly smaller than Pi. Return extruded entities in
 * `outDimTags'. If `numElements' is not empty, also extrude the mesh: the
 * entries in `numElements' give the number of elements in each layer. If
 * `height' is not empty, it provides the (cumulative) height of the different
 * layers, normalized to 1. If `recombine' is set, recombine the mesh in the
 * layers. */
GMSH_API void gmshModelGeoRevolve(int *dimTags, size_t dimTags_n,
                                  const double x,
                                  const double y,
                                  const double z,
                                  const double ax,
                                  const double ay,
                                  const double az,
                                  const double angle,
                                  int **outDimTags, size_t *outDimTags_n,
                                  int *numElements, size_t numElements_n,
                                  double *heights, size_t heights_n,
                                  const int recombine,
                                  int *ierr);
/* Extrude the entities `dimTags' in the built-in CAD representation, using a
 * combined translation and rotation of `angle' radians, along (`dx', `dy',
 * `dz') and around the axis of revolution defined by the point (`x', `y',
 * `z') and the direction (`ax', `ay', `az'). The angle should be strictly
 * smaller than Pi. Return extruded entities in `outDimTags'. If `numElements'
 * is not empty, also extrude the mesh: the entries in `numElements' give the
 * number of elements in each layer. If `height' is not empty, it provides the
 * (cumulative) height of the different layers, normalized to 1. If
 * `recombine' is set, recombine the mesh in the layers. */
GMSH_API void gmshModelGeoTwist(int *dimTags, size_t dimTags_n,
                                const double x,
                                const double y,
                                const double z,
                                const double dx,
                                const double dy,
                                const double dz,
                                const double ax,
                                const double ay,
                                const double az,
                                const double angle,
                                int **outDimTags, size_t *outDimTags_n,
                                int *numElements, size_t numElements_n,
                                double *heights, size_t heights_n,
                                const int recombine,
                                int *ierr);
/* Extrude the entities `dimTags' in the built-in CAD representation along the
 * normals of the mesh, creating discrete boundary layer entities. Return
 * extruded entities in `outDimTags'. The entries in `numElements' give the
 * number of elements in each layer. If `height' is not empty, it provides the
 * height of the different layers. If `recombine' is set, recombine the mesh
 * in the layers. A second boundary layer can be created from the same
 * entities if `second' is set. If `viewIndex' is >= 0, use the corresponding
 * view to either specify the normals (if the view contains a vector field) or
 * scale the normals (if the view is scalar). */
GMSH_API void gmshModelGeoExtrudeBoundaryLayer(int *dimTags, size_t dimTags_n,
                                               int **outDimTags, size_t *outDimTags_n,
                                               int *numElements, size_t numElements_n,
                                               double *heights, size_t heights_n,
                                               const int recombine,
                                               const int second,
                                               const int viewIndex,
                                               int *ierr);
/* Translate the entities `dimTags' in the built-in CAD representation along
 * (`dx', `dy', `dz'). */
GMSH_API void gmshModelGeoTranslate(int *dimTags, size_t dimTags_n,
                                    const double dx,
                                    const double dy,
                                    const double dz,
                                    int *ierr);
/* Rotate the entities `dimTags' in the built-in CAD representation by `angle'
 * radians around the axis of revolution defined by the point (`x', `y', `z')
 * and the direction (`ax', `ay', `az'). */
GMSH_API void gmshModelGeoRotate(int *dimTags, size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double ax,
                                 const double ay,
                                 const double az,
                                 const double angle,
                                 int *ierr);
/* Scale the entities `dimTag' in the built-in CAD representation by factors
 * `a', `b' and `c' along the three coordinate axes; use (`x', `y', `z') as
 * the center of the homothetic transformation. */
GMSH_API void gmshModelGeoDilate(int *dimTags, size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double a,
                                 const double b,
                                 const double c,
                                 int *ierr);
/* Mirror the entities `dimTag' in the built-in CAD representation, with
 * respect to the plane of equation `a' * x + `b' * y + `c' * z + `d' = 0. */
GMSH_API void gmshModelGeoMirror(int *dimTags, size_t dimTags_n,
                                 const double a,
                                 const double b,
                                 const double c,
                                 const double d,
                                 int *ierr);
/* Mirror the entities `dimTag' in the built-in CAD representation, with
 * respect to the plane of equation `a' * x + `b' * y + `c' * z + `d' = 0.
 * (This is a synonym for `mirror', which will be deprecated in a future
 * release.) */
GMSH_API void gmshModelGeoSymmetrize(int *dimTags, size_t dimTags_n,
                                     const double a,
                                     const double b,
                                     const double c,
                                     const double d,
                                     int *ierr);
/* Copy the entities `dimTags' in the built-in CAD representation; the new
 * entities are returned in `outDimTags'. */
GMSH_API void gmshModelGeoCopy(int *dimTags, size_t dimTags_n,
                               int **outDimTags, size_t *outDimTags_n,
                               int *ierr);
/* Remove the entities `dimTags' in the built-in CAD representation. If
 * `recursive' is true, remove all the entities on their boundaries, down to
 * dimension 0. */
GMSH_API void gmshModelGeoRemove(int *dimTags, size_t dimTags_n,
                                 const int recursive,
                                 int *ierr);
/* Remove all duplicate entities in the built-in CAD representation (different
 * entities at the same geometrical location). */
GMSH_API void gmshModelGeoRemoveAllDuplicates(int *ierr);
/* Split the curve of tag `tag' in the built-in CAD representation, on the
 * control points `pointTags'. Return the tags `curveTags' of the newly
 * created curves. */
GMSH_API void gmshModelGeoSplitCurve(const int tag,
                                     int *pointTags, size_t pointTags_n,
                                     int **curveTags, size_t *curveTags_n,
                                     int *ierr);
/* Get the maximum tag of entities of dimension `dim' in the built-in CAD
 * representation. */
GMSH_API int gmshModelGeoGetMaxTag(const int dim,
                                   int *ierr);
/* Set the maximum tag `maxTag' for entities of dimension `dim' in the built-
 * in CAD representation. */
GMSH_API void gmshModelGeoSetMaxTag(const int dim,
                                    const int maxTag,
                                    int *ierr);
/* Add a physical group of dimension `dim', grouping the entities with tags
 * `tags' in the built-in CAD representation. Return the tag of the physical
 * group, equal to `tag' if `tag' is positive, or a new tag if `tag' < 0. */
GMSH_API int gmshModelGeoAddPhysicalGroup(const int dim,
                                          int *tags, size_t tags_n,
                                          const int tag,
                                          int *ierr);