src/modules/GmshAPI/src/GmshInterface/GmshModelGeoInterface.F90


INTERFACE
  FUNCTION gmshModelGeoAddGeometry( &
    geometry, numbers, numbers_n, strings, strings_n, tag, ierr) &
    RESULT(ans) BIND(C, name="gmshModelGeoAddGeometry")
    IMPORT
    CHARACTER(len=1, kind=C_CHAR), DIMENSION(*), INTENT(in) :: geometry
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: numbers_n
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: strings_n
    REAL(C_DOUBLE), INTENT(IN) :: numbers(numbers_n)
    TYPE(C_PTR), INTENT(IN) :: strings(strings_n)
    INTEGER(C_INT), VALUE, INTENT(IN) :: tag
    INTEGER(C_INT), INTENT(OUT) :: ierr
    INTEGER(C_INT) :: ans
  END FUNCTION gmshModelGeoAddGeometry
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  FUNCTION gmshModelGeoAddPointOnGeometry( &
    geometryTag, x, y, z, meshSize, tag, ierr) RESULT(ans) &
    BIND(C, name="gmshModelGeoAddPointOnGeometry")
    IMPORT
    INTEGER(C_INT), VALUE, INTENT(IN) :: geometryTag, tag
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: x, y, z, meshSize
    INTEGER(C_INT), INTENT(OUT) :: ierr
    INTEGER(C_INT) :: ans
  END FUNCTION gmshModelGeoAddPointOnGeometry
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoExtrude( &
    dimTags, dimTags_n, dx, dy, dz, outDimTags, outDimTags_n, &
    numElements, numElements_n, heights, heights_n, recombine, &
    ierr) BIND(C, NAME="gmshModelGeoExtrude")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(*)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: dx, dy, dz
    TYPE(C_PTR), INTENT(IN) :: outDimTags
    INTEGER(C_SIZE_T), INTENT(OUT) :: outDimTags_n
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: numElements_n
    INTEGER(C_INT), INTENT(IN) :: numElements(numElements_n)
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: heights_n
    REAL(C_DOUBLE), INTENT(IN) :: heights(heights_n)
    INTEGER(C_INT), VALUE, INTENT(IN) :: recombine
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoExtrude
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoRevolve( &
    dimTags, dimTags_n, x, y, z, ax, ay, az, &
    angle, outDimTags, outDimTags_n, numElements, numElements_n, heights, &
    heights_n, recombine, ierr) BIND(C, NAME="gmshModelGeoRevolve")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(*)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: x, y, z, ax, ay, az, angle
    TYPE(C_PTR), INTENT(IN) :: outDimTags
    INTEGER(C_SIZE_T), INTENT(OUT) :: outDimTags_n
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: numElements_n
    INTEGER(C_INT), INTENT(IN) :: numElements(numElements_n)
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: heights_n
    REAL(C_DOUBLE), INTENT(IN) :: heights(heights_n)
    INTEGER(C_INT), VALUE, INTENT(IN) :: recombine
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoRevolve
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoTwist( &
    dimTags, dimTags_n, x, y, z, dx, dy, dz, ax, &
    ay, az, angle, outDimTags, outDimTags_n, numElements, numElements_n, &
    heights, heights_n, recombine, ierr) BIND(C, NAME="gmshModelGeoTwist")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(*)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: x, y, z, dx, dy, dz, &
                                         ax, ay, az, angle
    TYPE(C_PTR), INTENT(IN) :: outDimTags
    INTEGER(C_SIZE_T), INTENT(OUT) :: outDimTags_n
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: numElements_n
    INTEGER(C_INT), INTENT(IN) :: numElements(numElements_n)
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: heights_n
    REAL(C_DOUBLE), INTENT(IN) :: heights(heights_n)
    INTEGER(C_INT), VALUE, INTENT(IN) :: recombine
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoTwist
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoExtrudeBoundaryLayer( &
    dimTags, dimTags_n, outDimTags, outDimTags_n, numElements, &
    numElements_n, heights, heights_n, recombine, second, &
    viewIndex, ierr) BIND(C, NAME="gmshModelGeoExtrudeBoundaryLayer")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(*)
    TYPE(C_PTR), INTENT(IN) :: outDimTags
    INTEGER(C_SIZE_T), INTENT(OUT) :: outDimTags_n
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: numElements_n
    INTEGER(C_INT), INTENT(IN) :: numElements(numElements_n)
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: heights_n
    REAL(C_DOUBLE), INTENT(IN) :: heights(heights_n)
    INTEGER(C_INT), VALUE, INTENT(IN) :: recombine, second, viewIndex
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoExtrudeBoundaryLayer
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoTranslate( &
    dimTags, dimTags_n, dx, dy, dz, ierr) &
    BIND(C, NAME="gmshModelGeoTranslate")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(*)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: dx, dy, dz
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoTranslate
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoRotate( &
    dimTags, dimTags_n, x, y, z, ax, ay, az, angle, ierr) &
    BIND(C, NAME="gmshModelGeoRotate")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(*)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: x, y, z, ax, ay, az, angle
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoRotate
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoDilate( &
    dimTags, dimTags_n, x, y, z, a, b, c, ierr) &
    BIND(C, NAME="gmshModelGeoDilate")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(dimTags_n)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: x, y, z, a, b, c
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoDilate
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoMirror( &
    dimTags, dimTags_n, a, b, c, d, ierr) BIND(C, NAME="gmshModelGeoMirror")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(dimTags_n)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: a, b, c, d
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoMirror
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoSymmetrize( &
    dimTags, dimTags_n, a, b, c, d, ierr) &
    BIND(C, NAME="gmshModelGeoSymmetrize")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(dimTags_n)
    REAL(C_DOUBLE), VALUE, INTENT(IN) :: a, b, c, d
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoSymmetrize
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoCopy( &
    dimTags, dimTags_n, outDimTags, outDimTags_n, ierr) &
    BIND(C, NAME="gmshModelGeoCopy")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(dimTags_n)
    TYPE(C_PTR), INTENT(IN) :: outDimTags
    INTEGER(C_SIZE_T), INTENT(OUT) :: outDimTags_n
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoCopy
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoRemove( &
    dimTags, dimTags_n, RECURSIVE, ierr) BIND(C, NAME="gmshModelGeoRemove")
    IMPORT
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: dimTags_n
    INTEGER(C_INT), INTENT(IN) :: dimTags(dimTags_n)
    INTEGER(C_INT), VALUE, INTENT(IN) :: RECURSIVE
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoRemove
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoRemoveAllDuplicates(ierr) &
    BIND(C, NAME="gmshModelGeoRemoveAllDuplicates")
    IMPORT
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoRemoveAllDuplicates
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoSplitCurve( &
    tag, pointTags, pointTags_n, curveTags, curveTags_n, ierr) &
    BIND(C, NAME="gmshModelGeoSplitCurve")
    IMPORT
    INTEGER(C_INT), VALUE, INTENT(IN) :: tag
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: pointTags_n
    INTEGER(C_INT), INTENT(IN) :: pointTags(pointTags_n)
    TYPE(C_PTR), INTENT(IN) :: curveTags
    INTEGER(C_SIZE_T), INTENT(OUT) :: curveTags_n
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoSplitCurve
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  FUNCTION gmshModelGeoGetMaxTag(dim, ierr) RESULT(ans) &
    BIND(C, NAME="gmshModelGeoGetMaxTag")
    IMPORT
    INTEGER(C_INT), VALUE, INTENT(IN) :: dim
    INTEGER(C_INT), INTENT(OUT) :: ierr
    INTEGER(C_INT) :: ans
  END FUNCTION gmshModelGeoGetMaxTag
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  SUBROUTINE gmshModelGeoSetMaxTag( &
    dim, maxTag, ierr) BIND(C, NAME="gmshModelGeoSetMaxTag")
    IMPORT
    INTEGER(C_INT), VALUE, INTENT(IN) :: dim, maxTag
    INTEGER(C_INT), INTENT(OUT) :: ierr
  END SUBROUTINE gmshModelGeoSetMaxTag
END INTERFACE

!----------------------------------------------------------------------------
!
!----------------------------------------------------------------------------

INTERFACE
  FUNCTION gmshModelGeoAddPhysicalGroup( &
    dim, tags, tags_n, tag, name, ierr) RESULT(ans) &
    BIND(C, NAME="gmshModelGeoAddPhysicalGroup")
    IMPORT
    INTEGER(C_INT), VALUE, INTENT(IN) :: dim
    INTEGER(C_SIZE_T), VALUE, INTENT(IN) :: tags_n
    INTEGER(C_INT), INTENT(IN) :: tags(*)
    INTEGER(C_INT), VALUE, INTENT(IN) :: tag
    CHARACTER(len=1, kind=C_CHAR), INTENT(in) :: name(*)
    INTEGER(C_INT), INTENT(OUT) :: ierr
    INTEGER(C_INT) :: ans
  END FUNCTION gmshModelGeoAddPhysicalGroup
END INTERFACE
